--- a/MainWindow.glade
+++ b/MainWindow.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.2 -->
+<!-- Generated with glade 3.36.0 -->
 <interface>
   <requires lib="gtk+" version="3.18"/>
   <object class="GtkWindow" id="MainWindow">
@@ -8,9 +8,6 @@
     <property name="default_width">960</property>
     <property name="default_height">480</property>
     <property name="icon">ico/800.ico</property>
-    <child type="titlebar">
-      <placeholder/>
-    </child>
     <child>
       <object class="GtkPaned">
         <property name="visible">True</property>
@@ -61,9 +58,11 @@
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="label2">
+              <object class="GtkProgressBar" id="Progres">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_top">13</property>
+                <property name="pulse_step">0.2</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -102,6 +101,9 @@
           </packing>
         </child>
       </object>
+    </child>
+    <child type="titlebar">
+      <placeholder/>
     </child>
   </object>
 </interface>
