--- a/MainWindow.glade
+++ b/MainWindow.glade
@@ -74,6 +74,8 @@
               <object class="GtkEntry" id="Entry">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="progress_pulse_step">0.10000000022351742</property>
+                <property name="placeholder_text" translatable="yes">Currency:Address</property>
               </object>
               <packing>
                 <property name="expand">True</property>
