--- a/MainWindow.glade
+++ b/MainWindow.glade
@@ -5,9 +5,10 @@
   <object class="GtkWindow" id="MainWindow">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">PARSminexmr</property>
+    <property name="window_position">center</property>
     <property name="default_width">960</property>
     <property name="default_height">480</property>
-    <property name="icon">ico/800.ico</property>
+    <property name="icon">ico/800.png</property>
     <child>
       <object class="GtkPaned">
         <property name="visible">True</property>
