--- a/MainWindow.glade
+++ b/MainWindow.glade
@@ -26,7 +26,7 @@
                 <child>
                   <object class="GtkTextView" id="textView">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
+                    <property name="can_focus">False</property>
                     <property name="editable">False</property>
                   </object>
                 </child>
@@ -75,7 +75,9 @@
               <object class="GtkEntry" id="Entry">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="has_frame">False</property>
                 <property name="progress_pulse_step">0.10000000022351742</property>
+                <property name="primary_icon_activatable">False</property>
                 <property name="placeholder_text" translatable="yes">Currency:Address</property>
               </object>
               <packing>
@@ -89,6 +91,7 @@
                 <property name="label" translatable="yes">Send</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="can_default">True</property>
                 <property name="receives_default">True</property>
               </object>
               <packing>
