--- a/MainWindow.glade
+++ b/MainWindow.glade
@@ -27,6 +27,7 @@
                   <object class="GtkTextView" id="textView">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="has_default">True</property>
                     <property name="editable">False</property>
                   </object>
                 </child>
@@ -75,7 +76,7 @@
               <object class="GtkEntry" id="Entry">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="has_frame">False</property>
+                <property name="shadow_type">out</property>
                 <property name="progress_pulse_step">0.10000000022351742</property>
                 <property name="primary_icon_activatable">False</property>
                 <property name="placeholder_text" translatable="yes">Currency:Address</property>
