--- a/MainWindow.glade
+++ b/MainWindow.glade
@@ -2,7 +2,9 @@
 <!-- Generated with glade 3.36.0 -->
 <interface>
   <requires lib="gtk+" version="3.18"/>
+  <!-- interface-css-provider-path bin/Debug/netcoreapp5.0/Style.css -->
   <object class="GtkWindow" id="MainWindow">
+    <property name="name">main</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">PARSminexmr</property>
     <property name="window_position">center</property>
@@ -18,7 +20,6 @@
           <object class="GtkScrolledWindow">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="shadow_type">in</property>
             <child>
               <object class="GtkViewport">
                 <property name="visible">True</property>
@@ -27,7 +28,6 @@
                   <object class="GtkTextView" id="textView">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="has_default">True</property>
                     <property name="editable">False</property>
                   </object>
                 </child>
@@ -50,8 +50,12 @@
             <property name="orientation">vertical</property>
             <child>
               <object class="GtkLabel" id="label">
+                <property name="name">labelm</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <style>
+                  <class name="label1"/>
+                </style>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -112,5 +116,8 @@
     <child type="titlebar">
       <placeholder/>
     </child>
+    <style>
+      <class name="main"/>
+    </style>
   </object>
 </interface>
