--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -4,26 +4,33 @@ textview text {
     background-color: #0e1621;
   
 }
+
 textview {
     font-size: 15px;
 }
 
+#paned.button
+{
+    border-radius: 4px;
+    color: #954745;
+}
 
-button {
-  border-radius: 4px;
-  color: #000000;
-
+#titlebar  {
+    background: white;
+    min-height: 0px;
 }
 
 #main{
   background-color: #18212b;
 
 }
+
 entry {
   border-radius: 4px;
   color: #000000;
   background-color: #ffffff;
 }
+
 #labelm{
   color: #ffffff;
 }
