--- a/MainWindow.glade
+++ b/MainWindow.glade
@@ -2,7 +2,6 @@
 <!-- Generated with glade 3.36.0 -->
 <interface>
   <requires lib="gtk+" version="3.18"/>
-  <!-- interface-css-provider-path bin/Debug/netcoreapp5.0/Style.css -->
   <object class="GtkImage" id="image1">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -18,6 +17,7 @@
     <property name="icon">ico/800.png</property>
     <child>
       <object class="GtkPaned">
+        <property name="name">paned</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="wide_handle">True</property>
@@ -152,10 +152,27 @@
             <property name="shrink">False</property>
           </packing>
         </child>
+        <style>
+          <class name="paned"/>
+        </style>
       </object>
     </child>
     <child type="titlebar">
-      <placeholder/>
+      <object class="GtkHeaderBar" id="titlebar">
+        <property name="name">titlebar</property>
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="title" translatable="yes">PARSminexmr</property>
+        <property name="spacing">3</property>
+        <property name="show_close_button">True</property>
+        <property name="decoration_layout">icon:minimize,maximize,close</property>
+        <child>
+          <placeholder/>
+        </child>
+        <style>
+          <class name="titlebar"/>
+        </style>
+      </object>
     </child>
     <style>
       <class name="main"/>
